# reverse-engineering-domain-concepts-from-code-using-llms

./: .env.example  .gitignore  README.md  llm_helper.py  main.py  pyproject.toml  results_analysis.ipynb
artifacts/: project_sources.txt  retail-banking_class_definition_chained.txt
artifacts/class_diagrams/: retail-banking.puml  retail-banking_chained.puml
artifacts/comparison/: comparison_chained.txt  comparison_chained_with_high_threshold.txt
artifacts/data/: project_sources_classification.csv  project_sources_summary.csv  retail-banking_classification.csv  retail-banking_classification_chained.csv  retail-banking_summary.csv  retail-banking_summary_chained.csv
artifacts/seed_logs/: seed_detection_log.txt
artifacts/similarity_scores/: retail-banking_similarity_score.csv
config/: __init__.py  project.toml
custom_models/: custom_embedder.py  similarity_model.py
model/: class_component.py
preprocessing/: code_preprocessor.py  entrypoint_locator.py
prompts/: entrypoint.json  justification.json  suggestion.json  version1.json  version2.json
seed_detector/: seed_detector.py
services/: gemini_service.py  huggingface_service.py  interface_llm.py  janai_service.py  llama_service.py  llm_service.py  openai_service.py
utils/: extract_signatures.py  get_project_paths.py
