[tool.poetry]
name = "reverse-engineering-domain-concepts-from-code-using-llms"
version = "0.1.0"
description = ""
authors = ["IbrahimOued <brahim.oued@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
stanza = "^1.8.2"
matplotlib = "^3.9.0"
python-dotenv = "^1.0.1"
sentence-transformers = "^3.0.1"
mlflow = "^2.14.1"
scikit-learn = "^1.5.0"
seaborn = "^0.13.2"
transformers = "^4.41.2"
javalang = "^0.13.0"
tomli = "^2.0.1"
nltk = "^3.8.1"
requests = "^2.32.3"
google-generativeai = "^0.7.0"
ipykernel = "^6.29.4"
graphviz = "^0.20.3"
accelerate = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
